fix(components/search-engine): minor style fixes for filter btn and buttons (truncate)

--- a/@ecomplus/storefront-components/src/scss/SearchEngine.scss
+++ b/@ecomplus/storefront-components/src/scss/SearchEngine.scss
@@ -82,6 +82,7 @@
     }
 
     button {
+      max-width: 100%;
       padding-left: 0;
       color: var(--secondary);
       font-size: var(--font-size-lg);
